--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ashley</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <header class="header">
         <div class="header__wrapper">
             <div class="header__screen">
                 <a href="#!" class="header__logo">
-                    <img src="/img/logo.svg" alt="">
+                    <img src="./img/logo.svg" alt="">
                 </a>
                 <div class="screen__text">
                     <p>Ashley & Co</p>
