--- a/index.html
+++ b/index.html
@@ -7,34 +7,62 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    <header class="header">
-        <div class="header__wrapper">
-            <div class="header__screen">
-                <a href="#!" class="header__logo">
-                    <img src="./img/logo.svg" alt="">
-                </a>
-                <div class="screen__text">
-                    <p>Ashley & Co</p>
+<header class="header">
+    <div class="row">
+       <div class="row-1">
+            <div class="row-bg">
+                <div class="header__logo">
+                    <img src="/img/logo.svg" alt="">
+                </div>
+                <p class="bg-text">Ashley & Co</p>
+            </div>
+            <div class="row-text">Take your home scent to another realm</div>
+       </div>
+       <div class="row-2">
+            <div class="row__nav">
+                <a href="" class="row__cart">Cart (0)</a>
+                <div class="row__menu">
+                    <div class="row__menu-item"></div>
+                    <div class="row__menu-item"></div>
                 </div>
             </div>
-            <div class="header__about">
-                <div class="header__cart">
-                    <a href="" class="header__cart-cart">Cart (0)</a>
-                    <div class="header__menu">
-                        <div class="header__menu-item"></div>
-                        <div class="header__menu-item"></div>
-                    </div>
-                </div>
-                <div class="header__about-block">
-                    <p class="about-block__text">Let Power House Tui & Kahili uplift every space and surface that surrounds you, with each mist-filled pump.</p>
-                    <a href="" class="about-block__link">SHOP NEW PRODUCT</a>
+            <div class="row__about">
+                <div class="row__about-item">Let Power House Tui & Kahili uplift every space and surface that surrounds you, with each mist-filled pump.</div>
+                <a href="#!" class="row__about-link">SHOP NEW PRODUCT</a>
+            </div>
+
+       </div>
+    </div>
+    <div class="header__abs">
+        <p class="header__abs-text">
+            This website uses cookies to give you the best shopping experience. By continuing to browse the website we assume that you agree to the use of such cookies. Learn more about cookies and how we use them.
+        </p>
+        <div class="header__learn">
+            <a href="" class="learn-link">Learn More</a>
+        </div>
+    </div>
+</header>
+
+<main class="main">
+    <section class="candles">
+        <div class="candles__row">
+            <div class="candles__info">
+                <h2 class="candles__title">HAND POURED CANDLES</h2>
+                <div class="candles__text">
+                    <p>
+                        The flicker of the wick and the wafting of scent…Waxed Perfume is the simplest daily self-indulgence.
+                    </p>
+                    <a href="" class="candles__link">
+                        browse our full collection
+                    </a>
                 </div>
             </div>
-    
+            <div class="candles__bg">
+                <div class="candles__bg-img"></div>
+                <p class="candles__down-text">Share the light, everyday</p>
+            </div>
         </div>
-        <div class="header__foot">
-            <h1>ку</h1>
-        </div>
-    </header>
+    </section>
+</main>
 </body>
 </html>
