--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
        <div class="row-1">
             <div class="row-bg">
                 <div class="header__logo">
-                    <img src="/img/logo.svg" alt="">
+                    <img src="./img/logo.svg" alt="">
                 </div>
                 <p class="bg-text">Ashley & Co</p>
             </div>
@@ -21,10 +21,10 @@
        <div class="row-2">
             <div class="row__nav">
                 <a href="" class="row__cart">Cart (0)</a>
-                <div class="row__menu">
+                <button class="row__menu">
                     <div class="row__menu-item"></div>
                     <div class="row__menu-item"></div>
-                </div>
+                </button>
             </div>
             <div class="row__about">
                 <div class="row__about-item">Let Power House Tui & Kahili uplift every space and surface that surrounds you, with each mist-filled pump.</div>
