--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-<header class="header">
+<header class="header none1">
     <div class="row">
        <div class="row-1">
             <div class="row-bg">
@@ -44,7 +44,7 @@
 </header>
 
 <main class="main">
-    <section class="candles">
+    <section class="candles none1">
         <div class="candles__row">
             <div class="candles__info">
                 <h2 class="candles__title">HAND POURED CANDLES</h2>
@@ -60,6 +60,57 @@
             <div class="candles__bg">
                 <div class="candles__bg-img"></div>
                 <p class="candles__down-text">Share the light, everyday</p>
+            </div>
+        </div>
+    </section>
+    <section class="images__screen none1">
+        <div class="images__column">
+            <div class="images__sprinker">
+                <p class="images__screen-text">Dialed to 70% alcohol</p>
+            </div>
+            <div class="images__cream">
+                <p class="images__screen-text">REFILL WITH TOPUP</p>
+            </div>
+        </div>
+    </section>
+    <section class="benefit none1">
+        <div class="benefit__row">
+            <div class="benefit__img"></div>
+            <div class="benefit__text">
+                <p class="benefit__about">ABOUT US</p>
+                <h3 class="benefit__title">A modern day scent company</h3>
+                <p class="benefit__lowest">Be it fresh and plush, or musky or verdant, scent is at the centre of everything we do.</p>
+                <p class="benefit__higher">From Body, Hair, Home and Essential Cleaning, our products are crafted to be both beautiful and uplifting, practical and effective.</p>
+                <div class="link__wrapper">
+                    <a href="#!" class="benefit__link">READ MORE</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="girl none1">
+        <div class="girl__row">
+            <div class="girl__info">
+                <h3 class="girl__title">MODERN REED DIFFUSER</h3>
+                <div class="girl__desc">
+                    <p class="girl__desc-text">Home Perfume does the hard work for you, offering a subtle yet consistent scent in your home, eliminating the need to have to scent ‘by hand’.</p>
+                    <a href="" class="girl__link">VIEW MORE</a>
+                </div>
+            </div>
+            <div class="girl__bg">
+                <div class="girl__bg-img"></div>
+                <p class="girl__bg-text">Home Perfume</p>
+            </div>
+        </div>
+    </section>
+    <section class="power none1">
+        <div class="power__bg">
+            <div class="power__text-wrapper">
+                <div class="power__text">
+                    <h3 class="power__subtitle">ROOM MIST</h3>
+                    <h2 class="power__title">Hip-hop, house swap</h2>
+                    <p class="power__desc">Freshen tired surrounds with a boost of fresh scent with Power House Nine to Five. Blond Tobacco, cinders of burnt Birch laced with Geranium, Violet Leaves and the humble Tonka Bean.</p>
+                    <a href="" class="power__link">SHOP NINE TO FIVE</a>
+                </div>
             </div>
         </div>
     </section>
