--- a/index.html
+++ b/index.html
@@ -7,113 +7,169 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-<header class="header none1">
-    <div class="row">
-       <div class="row-1">
-            <div class="row-bg">
-                <div class="header__logo">
-                    <img src="./img/logo.svg" alt="">
+    <header class="header none1">
+        <div class="row">
+        <div class="row-1">
+                <div class="row-bg">
+                    <div class="header__logo">
+                        <img src="./img/logo.svg" alt="">
+                    </div>
+                    <p class="bg-text">Ashley & Co</p>
                 </div>
-                <p class="bg-text">Ashley & Co</p>
-            </div>
-            <div class="row-text">Take your home scent to another realm</div>
-       </div>
-       <div class="row-2">
-            <div class="row__nav">
-                <a href="" class="row__cart">Cart (0)</a>
-                <button class="row__menu">
-                    <div class="row__menu-item"></div>
-                    <div class="row__menu-item"></div>
-                </button>
-            </div>
-            <div class="row__about">
-                <div class="row__about-item">Let Power House Tui & Kahili uplift every space and surface that surrounds you, with each mist-filled pump.</div>
-                <a href="#!" class="row__about-link">SHOP NEW PRODUCT</a>
-            </div>
-
-       </div>
-    </div>
-    <div class="header__abs">
-        <p class="header__abs-text">
-            This website uses cookies to give you the best shopping experience. By continuing to browse the website we assume that you agree to the use of such cookies. Learn more about cookies and how we use them.
-        </p>
-        <div class="header__learn">
-            <a href="" class="learn-link">Learn More</a>
+                <div class="row-text">Take your home scent to another realm</div>
         </div>
-    </div>
-</header>
+        <div class="row-2">
+                <div class="row__nav">
+                    <a href="" class="row__cart">Cart (0)</a>
+                    <button class="row__menu">
+                        <div class="row__menu-item"></div>
+                        <div class="row__menu-item"></div>
+                    </button>
+                </div>
+                <div class="row__about">
+                    <div class="row__about-item">Let Power House Tui & Kahili uplift every space and surface that surrounds you, with each mist-filled pump.</div>
+                    <a href="#!" class="row__about-link">SHOP NEW PRODUCT</a>
+                </div>
 
-<main class="main">
-    <section class="candles none1">
-        <div class="candles__row">
-            <div class="candles__info">
-                <h2 class="candles__title">HAND POURED CANDLES</h2>
-                <div class="candles__text">
-                    <p>
-                        The flicker of the wick and the wafting of scent…Waxed Perfume is the simplest daily self-indulgence.
+        </div>
+        </div>
+        <div class="header__abs">
+            <p class="header__abs-text">
+                This website uses cookies to give you the best shopping experience. By continuing to browse the website we assume that you agree to the use of such cookies. Learn more about cookies and how we use them.
+            </p>
+            <div class="header__learn">
+                <a href="" class="learn-link">Learn More</a>
+            </div>
+        </div>
+    </header>
+
+    <main class="main">
+        <section class="candles none1">
+            <div class="candles__row">
+                <div class="candles__info">
+                    <h2 class="candles__title">HAND POURED CANDLES</h2>
+                    <div class="candles__text">
+                        <p>
+                            The flicker of the wick and the wafting of scent…Waxed Perfume is the simplest daily self-indulgence.
+                        </p>
+                        <a href="" class="candles__link">
+                            browse our full collection
+                        </a>
+                    </div>
+                </div>
+                <div class="candles__bg">
+                    <div class="candles__bg-img"></div>
+                    <p class="candles__down-text">Share the light, everyday</p>
+                </div>
+            </div>
+        </section>
+        <section class="images__screen none1">
+            <div class="images__column">
+                <div class="images__sprinker">
+                    <p class="images__screen-text">Dialed to 70% alcohol</p>
+                </div>
+                <div class="images__cream">
+                    <p class="images__screen-text">REFILL WITH TOPUP</p>
+                </div>
+            </div>
+        </section>
+        <section class="benefit none1">
+            <div class="benefit__row">
+                <div class="benefit__img"></div>
+                <div class="benefit__text">
+                    <p class="benefit__about">ABOUT US</p>
+                    <h3 class="benefit__title">A modern day scent company</h3>
+                    <p class="benefit__lowest">Be it fresh and plush, or musky or verdant, scent is at the centre of everything we do.</p>
+                    <p class="benefit__higher">From Body, Hair, Home and Essential Cleaning, our products are crafted to be both beautiful and uplifting, practical and effective.</p>
+                    <div class="link__wrapper">
+                        <a href="#!" class="benefit__link">READ MORE</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="girl none1">
+            <div class="girl__row">
+                <div class="girl__info">
+                    <h3 class="girl__title">MODERN REED DIFFUSER</h3>
+                    <div class="girl__desc">
+                        <p class="girl__desc-text">Home Perfume does the hard work for you, offering a subtle yet consistent scent in your home, eliminating the need to have to scent ‘by hand’.</p>
+                        <a href="" class="girl__link">VIEW MORE</a>
+                    </div>
+                </div>
+                <div class="girl__bg">
+                    <div class="girl__bg-img"></div>
+                    <p class="girl__bg-text">Home Perfume</p>
+                </div>
+            </div>
+        </section>
+        <section class="power none1">
+            <div class="power__bg">
+                <div class="power__text-wrapper">
+                    <div class="power__text">
+                        <h3 class="power__subtitle">ROOM MIST</h3>
+                        <h2 class="power__title">Hip-hop, house swap</h2>
+                        <p class="power__desc">Freshen tired surrounds with a boost of fresh scent with Power House Nine to Five. Blond Tobacco, cinders of burnt Birch laced with Geranium, Violet Leaves and the humble Tonka Bean.</p>
+                        <a href="" class="power__link">SHOP NINE TO FIVE</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="orange none1">
+            <div class="orange__row">
+                <div class="orange__info">
+                    <h2 class="orange__title">Hand Wash</h2>
+                    <div class="orange__desc">
+                        <p class="orange__desc-text">Botanical Hand Wash for use anytime/everyday. Bolstered with Aloe, Horopito and Grapefruit Seed!</p>
+                        <a href="" class="orange__link">SHOP OUR SCENTS</a>
+                    </div>
+                </div>
+                <div class="orange__bg">
+                    <div class="orange__bg-img"></div>
+                    <h4 class="orange__bg-text">
+                        Your habitual helper
+                    </h4>
+                </div>
+            </div>
+        </section>
+        <section class="industry none1">
+            <div class="industry__row">
+                <div class="industry__info">
+                    <h2 class="industry__title">Industry</h2>
+                    <div class="industry__desc">
+                        <p class="industry__desc-text">For the most particular of places, stamp out single-use with Hold Me by Ashley & Co®</p>
+                        <a href="#!" class="industry__link">Read More</a>
+                    </div>
+                </div>
+                <div class="industry__bg">
+                    <div class="industry__bg-img">
+
+                    </div>
+                    <p class="industry__bg-text">
+                        Hold Me
                     </p>
-                    <a href="" class="candles__link">
-                        browse our full collection
-                    </a>
                 </div>
             </div>
-            <div class="candles__bg">
-                <div class="candles__bg-img"></div>
-                <p class="candles__down-text">Share the light, everyday</p>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="footer__content">
+            <div class="footer__text">
+                <p>Sign up to our newsletter and enrich your lives for good.</p>
+                <div class="footer__cube"></div>
             </div>
+            <form action="" class="login">
+                <label class="login__name">
+                    <input type="text" class="input-name">
+                    <p class="name__text">Name</p>
+                </label>
+                <label class="login__email">
+                    <input type="text" class="input-email">
+                    <p class="email__text">Email</p>
+                </label>
+                <button class="submit">SUBMIT </button>
+            </form>
         </div>
-    </section>
-    <section class="images__screen none1">
-        <div class="images__column">
-            <div class="images__sprinker">
-                <p class="images__screen-text">Dialed to 70% alcohol</p>
-            </div>
-            <div class="images__cream">
-                <p class="images__screen-text">REFILL WITH TOPUP</p>
-            </div>
-        </div>
-    </section>
-    <section class="benefit none1">
-        <div class="benefit__row">
-            <div class="benefit__img"></div>
-            <div class="benefit__text">
-                <p class="benefit__about">ABOUT US</p>
-                <h3 class="benefit__title">A modern day scent company</h3>
-                <p class="benefit__lowest">Be it fresh and plush, or musky or verdant, scent is at the centre of everything we do.</p>
-                <p class="benefit__higher">From Body, Hair, Home and Essential Cleaning, our products are crafted to be both beautiful and uplifting, practical and effective.</p>
-                <div class="link__wrapper">
-                    <a href="#!" class="benefit__link">READ MORE</a>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="girl none1">
-        <div class="girl__row">
-            <div class="girl__info">
-                <h3 class="girl__title">MODERN REED DIFFUSER</h3>
-                <div class="girl__desc">
-                    <p class="girl__desc-text">Home Perfume does the hard work for you, offering a subtle yet consistent scent in your home, eliminating the need to have to scent ‘by hand’.</p>
-                    <a href="" class="girl__link">VIEW MORE</a>
-                </div>
-            </div>
-            <div class="girl__bg">
-                <div class="girl__bg-img"></div>
-                <p class="girl__bg-text">Home Perfume</p>
-            </div>
-        </div>
-    </section>
-    <section class="power none1">
-        <div class="power__bg">
-            <div class="power__text-wrapper">
-                <div class="power__text">
-                    <h3 class="power__subtitle">ROOM MIST</h3>
-                    <h2 class="power__title">Hip-hop, house swap</h2>
-                    <p class="power__desc">Freshen tired surrounds with a boost of fresh scent with Power House Nine to Five. Blond Tobacco, cinders of burnt Birch laced with Geranium, Violet Leaves and the humble Tonka Bean.</p>
-                    <a href="" class="power__link">SHOP NINE TO FIVE</a>
-                </div>
-            </div>
-        </div>
-    </section>
-</main>
+    </footer>
+
 </body>
 </html>
