--- a/index.html
+++ b/index.html
@@ -158,14 +158,14 @@
                 <div class="footer__cube"></div>
             </div>
             <form action="" class="login">
-                <label class="login__name">
+                <div class="login__name">
                     <input type="text" class="input-name">
                     <p class="name__text">Name</p>
-                </label>
-                <label class="login__email">
+                </div>
+                <div class="login__email">
                     <input type="text" class="input-email">
                     <p class="email__text">Email</p>
-                </label>
+                </div>
                 <button class="submit">SUBMIT </button>
             </form>
         </div>
